--- a/hermes/Cargo.toml
+++ b/hermes/Cargo.toml
@@ -61,7 +61,6 @@ hex-literal = "0.4.1"
 thiserror = "1.0.56"
 criterion = "0.5.1"
 time = "0.3.34"
-time-tz = "2.0.0"
-libc = "0.2"
 chrono = "0.4.34"
+chrono-tz = "0.8.6"
 once_cell = "1.19.0"
