--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -29,7 +29,6 @@ hex-literal = { workspace = true }
 thiserror = { workspace = true }
 criterion = { workspace = true, optional = true }
 time = { workspace = true, features = ["local-offset", "macros", "parsing"] }
-time-tz = { workspace = true, features = ["system"] }
-libc = { workspace = true }
 chrono = { workspace = true }
+chrono-tz = { workspace = true }
 once_cell = { workspace = true }
