--- a/hermes/crates/cardano-chain-follower/Cargo.toml
+++ b/hermes/crates/cardano-chain-follower/Cargo.toml
@@ -13,10 +13,10 @@ workspace = true
 [dependencies]
 pallas.workspace = true
 pallas-hardano.workspace = true
-thiserror = "1.0.50"
-tokio = { version = "1.34.0", default-features = false, features = ["macros", "rt", "net", "rt-multi-thread"] }
-tracing = "0.1.40"
+thiserror.workspace = true
+tokio = { workspace = true, features = ["macros", "rt", "net", "rt-multi-thread"] }
+tracing.workspace = true
 
 [dev-dependencies]
-hex = "0.4.3"
-tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+hex.workspace = true
+tracing-subscriber = { workspace = true, features = ["env-filter"] }
