build(deps): add iana-time-zone crate

--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -32,3 +32,4 @@ time = { workspace = true, features = ["local-offset", "macros", "parsing"] }
 chrono = { workspace = true }
 chrono-tz = { workspace = true }
 once_cell = { workspace = true }
+iana-time-zone = { workspace = true }
