--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -28,7 +28,7 @@ blake2b_simd = { workspace = true }
 hex-literal = { workspace = true }  
 thiserror = { workspace = true }
 criterion = { workspace = true, optional = true }
-time = { workspace = true, features = ["local-offset", "macros", "parsing"] }
+time = { workspace = true }
 chrono = { workspace = true }
 chrono-tz = { workspace = true }
 once_cell = { workspace = true }
