feat: add bip32 crate

--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -27,3 +27,4 @@ bip39 = { workspace = true, features = ["chinese-simplified", "chinese-tradition
 cryptoxide = { workspace = true }
 rand = { workspace = true }
 rand_core = { workspace = true }
+bip32 = { workspace = true }
