--- a/hermes/crates/cbork/.config/nextest.toml
+++ b/hermes/crates/cbork/.config/nextest.toml
@@ -1,4 +1,4 @@
-# cspell: words scrollability testcase
+# cspell: words scrollability
 [store]
 # The directory under the workspace root at which nextest-related files are
 # written. Profile-specific storage is currently written to dir/<profile-name>.
