--- a/hermes/Cargo.toml
+++ b/hermes/Cargo.toml
@@ -65,4 +65,6 @@ tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 criterion = "0.5.1"
 time = "0.3.34"
+libtest-mimic = "0.7.0"
+crossbeam-queue = "0.3.11"
 once_cell = "1.19.0"
