feat(rust): Time Module Implementation (#142)
* build(deps): add once_cell and tokio crates

* fix: cleanup lint in cron

* feat: implement monotonic clock api

* feat: implement wall clock api

* deps: use features from time crate

* feat(wip): stub code for localtime module

* feat(wip): initial implementation code for get_localtime and alt_localtime

* feat: implement time module

* feat(wip): monotonic clock resolution

* fix: remove extra info

* chore: update project dictionary

* fix: merge deps

* build(deps): remove time-tz and libc, add chrono-tz

* feat: monotonic clock state implemented

* fix: update localtime api to use chrono-tz

* build(deps): add iana-time-zone crate

* feat: cleanup localtime API

* chore: update project dictionary

* deps: remove unused features from time crate

* fix: error for invalid localtime

* fix: requested changes to monotonic clock state

* stores resolution at initialization
* exposes resolution through pub(crate) function

* fix: remove debug code

* fix: Apply suggestions from code review

All monotonic requires is that it never go backwards, but it can remain the same in subsequent calls.

Co-authored-by: Steven Johnson <stevenj@users.noreply.github.com>

* fix: update docstring for base instant

* feat: clock api state contains resolution

---------

Co-authored-by: Steven Johnson <stevenj@users.noreply.github.com>

--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -29,6 +29,9 @@ hex-literal = { workspace = true }
 thiserror = { workspace = true }
 criterion = { workspace = true, optional = true }
 time = { workspace = true }
+chrono = { workspace = true }
+chrono-tz = { workspace = true }
+iana-time-zone = { workspace = true }
 libtest-mimic = { workspace = true }
 crossbeam-queue = { workspace = true }
 once_cell = { workspace = true }
