--- a/hermes/Cargo.toml
+++ b/hermes/Cargo.toml
@@ -65,6 +65,9 @@ tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 criterion = "0.5.1"
 time = "0.3.34"
+chrono = "0.4.34"
+chrono-tz = "0.8.6"
 libtest-mimic = "0.7.0"
 crossbeam-queue = "0.3.11"
 once_cell = "1.19.0"
+iana-time-zone = "0.1.60"
