--- a/hermes/deny.toml
+++ b/hermes/deny.toml
@@ -110,7 +110,8 @@ allow = [
     "BSD-3-Clause",
     "BSD-2-Clause",
     "BlueOak-1.0.0",
-    "Apache-2.0 WITH LLVM-exception"
+    "Apache-2.0 WITH LLVM-exception",
+    "CC0-1.0"
 ]
 # List of explicitly disallowed licenses
 # See https://spdx.org/licenses/ for list of possible licenses
