feat(api): Implement Ed25519-BIP32 (#127)
* feat: add ed25519-bip32 crate

* fix: change key type to bstr

* feat: impl new for Ed25519Bip32

* feat: implement state and resource holder

* chore: calling crypto state

* feat: implement get pub key

* fix: state

* feat: implement sign data

* feat: implement check signature

* feat: implement resource drop crypto

* feat: implement derive

* fix: remove unnecessary struct

* fix: syntax cleanup

* fix: cspell

* fix: format

* chore: add dashmap crate

* fix: change to type with fix size

* fix: change signature length to 512

* fix: restructure crypto resource and states

* fix: crypto api implementation

* feat: add once_cell crate

* fix: extract state to its own mod

* fix: remove generic from impl

* fix: crypto state implementation

* fix: crypto state

* fix: crypto state

* fix: counter and map in crypto state

* fix: use XPrv from lib

* fix: create wrap Xprv

* fix: crypto state

* fix: remove FIXME and fix From impl

* fix: add thread safe test and comments

* chore: add println for esier debug

* chore: comment out old functionality

* fix: add resource and test

* feat: add bip39 lib

* feat: add bip32-ed25519 implementation

* fix: constructor to accept bip39

* fix: mnemonic to xprv

* fix: change mnemonic and passphrase to list

* feat: add rand and rand_core lib

* feat: start implement generating mnemonic

* feat: implement mnemonic generating with prefix

* chore: add bip39 support lang

* feat: add crypto error

* fix: add mnemonic to priv test and refactor

* fix: move bip39 to its own module + write doc and comment

* chore: fix func name and add comment

* feat: add bip32-ed25519 implementation

* fix: bip32-ed25519 name + add path to derive

* feat: add bip32 crate

* feat: implement test

* fix: host crypto

* fix: test vector

* fix: add doc

* feat: implement derive, sign data, che

--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -34,6 +34,12 @@ chrono-tz = { workspace = true }
 iana-time-zone = { workspace = true }
 libtest-mimic = { workspace = true }
 crossbeam-queue = { workspace = true }
+bip39 = { workspace = true, features = ["chinese-simplified", "chinese-traditional", "czech", "french", "italian", "japanese", "korean", "spanish" ] }
+cryptoxide = { workspace = true }
+rand = { workspace = true }
+bip32 = { workspace = true }
+ed25519-bip32 = { workspace = true }
+dashmap = { workspace = true }
 once_cell = { workspace = true }
 
 [[test]]
