--- a/hermes/Cargo.toml
+++ b/hermes/Cargo.toml
@@ -69,5 +69,11 @@ chrono = "0.4.34"
 chrono-tz = "0.8.6"
 libtest-mimic = "0.7.0"
 crossbeam-queue = "0.3.11"
-once_cell = "1.19.0"
+bip39 = "2.0.0"
 iana-time-zone = "0.1.60"
+cryptoxide = "0.4.4"
+rand = "0.8.5"
+bip32 = "0.5.1"
+ed25519-bip32 = "0.4.1"
+dashmap = "5.5.3"
+once_cell = "1.19.0"
