feat: add dependencies

--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -41,8 +41,15 @@ bip32 = { workspace = true }
 ed25519-bip32 = { workspace = true }
 dashmap = { workspace = true }
 once_cell = { workspace = true }
+clap = { workspace = true, features = ["derive", "env"] }
+tracing = { workspace = true, features = ["log"] }
+tracing-subscriber = { workspace = true, features = ["fmt", "json", "time"] }
+build-info = { workspace = true }
 
 [[test]]
 name = "wasm-component-integration-tests"
 path = "tests/wasm-integration/main.rs"
 harness = false
+
+[build-dependencies]
+build-info-build = "0.0.36"
