--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -45,6 +45,7 @@ clap = { workspace = true, features = ["derive", "env"] }
 tracing = { workspace = true, features = ["log"] }
 tracing-subscriber = { workspace = true, features = ["fmt", "json", "time"] }
 build-info = { workspace = true }
+derive_more = { workspace = true }
 
 [[test]]
 name = "wasm-component-integration-tests"
@@ -52,4 +53,5 @@ path = "tests/wasm-integration/main.rs"
 harness = false
 
 [build-dependencies]
+
 build-info-build = "0.0.36"
