--- a/hermes/Cargo.toml
+++ b/hermes/Cargo.toml
@@ -79,4 +79,4 @@ dashmap = "5.5.3"
 once_cell = "1.19.0"
 clap = "4.5.3"
 build-info = "0.0.36"
-derive_more =  "0.99.17"
+derive_more =  { version= "0.99.17", default-features= false }
