--- a/hermes/Cargo.toml
+++ b/hermes/Cargo.toml
@@ -77,3 +77,7 @@ bip32 = "0.5.1"
 ed25519-bip32 = "0.4.1"
 dashmap = "5.5.3"
 once_cell = "1.19.0"
+clap = "4.5.3"
+build-info = "0.0.36"
+derive_more = { version= "0.99.17", default-features= false }
+build-info-build = "0.0.36"
