--- a/hermes/crates/cbork/deny.toml
+++ b/hermes/crates/cbork/deny.toml
@@ -110,7 +110,8 @@ allow = [
     "BSD-3-Clause",
     "BSD-2-Clause",
     "BlueOak-1.0.0",
-    "Apache-2.0 WITH LLVM-exception"
+    "Apache-2.0 WITH LLVM-exception",
+    "CC0-1.0"
 ]
 # List of explicitly disallowed licenses
 # See https://spdx.org/licenses/ for list of possible licenses
@@ -271,7 +272,7 @@ allow-registry = ["https://github.com/rust-lang/crates.io-index"]
 allow-git = [
     # Remove this once upstream changes are merged.
     # issue: https://github.com/input-output-hk/hermes/issues/63
-    "https://github.com/input-output-hk/catalyst-pallas"
+    "https://github.com/input-output-hk/hermes"
 ]
 
 [sources.allow-org]
