feat(cron api rust): Implement Cron Events Rust (#145)
* deps: add dashmap crate

* fix: use dashmap instead of hashmap

* chore: update project dictionary

* fix: update cron implementation to use dashmap

* fix: simpler

* refactor: store OnCronEvent in dashmap

Refactor  hermes::cron::State to implement CRUD methods to manage
crontabs

* chore(dict): update project dictionary

* feat(deps): add once_cell and saffron crates

* refactor(cron): refactor state into its own module

* feat: CronTagged impls Hash, PartialEq, Eq, PartialOrd, Ord

* chore: cleanup types

* feat(wip): spawn a cron queue task and store its handle

* fix: remove todos, return values

* feat(wip): add cron queue channels and message type.

* feat(cron): OnCronEvent calculates next timestamp for schedule

* build(deps): add tokio and chrono crates

* chore: update project dictionary

* feat: use saffron::Cron to parse schedules and generate next timestamp

* fix: set MIN_DOW to 1 to keep compatibility with saffron

* feat: add types for cron queue

* feat: implement cron queue storage functionality

* fix: update make_delay to use chron and generate CronJobDelay

* refactor: state is managed in threaded async queue

* fix: update Host implementation to use global static state

* fix: implement Ord for CronComponent to be infallible

* fix: cron state can start without queue task

* fix: implement Ord for CronTagged to be infallible

* fix: typo

* fix: remote commands to catch errors for logging

* feat(wip): add todo comments for logging

* build(deps): update chrono crate and types

* feat: expose cron queue state via functions

docs: improve docstrings

* fix: cleanup

* build(deps): remove time crate

* fix: remove pub(crate) from cron internal state

* feat: on cron event handles response from module

* feat: add unit tests for cron queue methods

* fix(wip): disable cron state tests

* feat: add unit tests f

--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -28,10 +28,6 @@ blake2b_simd = { workspace = true }
 hex-literal = { workspace = true }
 thiserror = { workspace = true }
 criterion = { workspace = true, optional = true }
-time = { workspace = true }
-chrono = { workspace = true }
-chrono-tz = { workspace = true }
-iana-time-zone = { workspace = true }
 libtest-mimic = { workspace = true }
 crossbeam-queue = { workspace = true }
 bip39 = { workspace = true, features = ["chinese-simplified", "chinese-traditional", "czech", "french", "italian", "japanese", "korean", "spanish" ] }
@@ -46,6 +42,11 @@ tracing = { workspace = true, features = ["log"] }
 tracing-subscriber = { workspace = true, features = ["fmt", "json", "time"] }
 build-info = { workspace = true }
 derive_more = { workspace = true, features = ["display"], default-features = false }
+chrono = { workspace = true, features = ["now"] }
+chrono-tz = { workspace = true }
+iana-time-zone = { workspace = true }
+tokio = { workspace = true, features = ["macros", "rt","sync",  "time"] }
+saffron = { workspace = true }
 
 [[test]]
 name = "wasm-component-integration-tests"
