--- a/hermes/Cargo.toml
+++ b/hermes/Cargo.toml
@@ -76,8 +76,10 @@ ed25519-bip32 = "0.4.1"
 dashmap = "5.5.3"
 once_cell = "1.19.0"
 clap = "4.5.3"
-derive_more = { version= "0.99.17", default-features= false }
+derive_more = { version= "0.99.17", default-features = false }
 chrono = "0.4.35"
 chrono-tz = "0.8.6"
 saffron = "0.1.0"
 tokio = "1.36.0"
+pest = "2.7.2"
+pest_derive = "2.7.2"
