--- a/wasm/wasi-hermes-component-adapter/Cargo.toml
+++ b/wasm/wasi-hermes-component-adapter/Cargo.toml
@@ -2,13 +2,10 @@
 
 [workspace]
 resolver = "2"
-members = [
-    "./byte-array-literals"
-]
 
 [workspace.package]
 edition = "2021"
-version = "0.0.1"
+version = "0.0.2"
 authors = [
     "Apisit Ritreungroj <apisit.ritreungroj@iohk.io>",
     "Steven Johnson <steven.johnson@iohk.io>"
@@ -53,11 +50,11 @@ unreachable = "deny"
 missing_docs_in_private_items = "deny"
 
 [workspace.dependencies]
-wit-bindgen = { version = "0.16.0", default-features = false }
-wasi = { version = "0.11.0", default-features = false }
-byte-array-literals = { path = "./byte-array-literals", version = "0.0.1" }
-wasm-encoder = "0.38.1"
-object = { version = "0.32.1", default-features = false }
+wit-bindgen = { version = "0.19.2", default-features = false } # Anything after 0.19.2 does not work. Do not bump version.
+wasi = { version = "0.11.0", default-features = false } # Needs to be 0.11 or it fails to build. Do not bump version.
+byte-array-literals = { git = "https://github.com/bytecodealliance/wasmtime", tag = "v20.0.1" }
+wasm-encoder = "0.206.0"
+object = { version = "0.35.0", default-features = false }
 
 [package]
 name = "wasi-hermes-component-adapter"
