--- a/hermes/deny.toml
+++ b/hermes/deny.toml
@@ -1,3 +1,5 @@
+# cspell: words msvc, wasip, RUSTSEC, rustls, libssh, reqwest, tinyvec, Leay, webpki
+
 [graph]
 # cargo-deny is really only ever intended to run on the "normal" tier-1 targets
 targets = [
