--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,10 @@ $RECYCLE.BIN/
 # Dart stuff
 /pubspec.lock
 /.dart_tool/**/*
+
+# Rust stuff
+
+# By default ignore Cargo.lock
+# Specifically exclude it in the directory it appears, if its required.
+# More information here https://doc.rust-lang.org/cargo/guide/cargo-toml-vs-cargo-lock.html
+Cargo.lock
