--- a/hermes/crates/cbork/deny.toml
+++ b/hermes/crates/cbork/deny.toml
@@ -19,6 +19,7 @@ all-features = true
 version = 2
 ignore = [
     { id = "RUSTSEC-2020-0168", reason = "`mach` is used by wasmtime and we have no control over that." },
+    { id = "RUSTSEC-2021-0145", reason = "we don't target windows, and don;t use a custom global allocator." },
 ]
 
 [bans]
