add basic hdf5 example test

--- a/hermes/Cargo.toml
+++ b/hermes/Cargo.toml
@@ -87,3 +87,4 @@ saffron = "0.1.0"
 tokio = "1.36.0"
 pest = "2.7.2"
 pest_derive = "2.7.2"
+hdf5 = { git="https://github.com/aldanor/hdf5-rust.git", rev="694e900972fbf5ffbdd1a2294f57a2cc3a91c994", version="0.8.1" }
