--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -56,6 +56,7 @@ tokio = { workspace = true, features = ["rt", "sync",  "time"] }
 pallas = { workspace = true }
 saffron = { workspace = true }
 libsqlite3-sys = { workspace = true, features = ["bundled"] }
+stringzilla = { workspace = true }
 
 [build-dependencies]
 build-info-build = { workspace = true }
