--- a/hermes/Cargo.toml
+++ b/hermes/Cargo.toml
@@ -78,6 +78,8 @@ ed25519-bip32 = "0.4.1"
 dashmap = "5.5.3"
 once_cell = "1.19.0"
 clap = "4.5.3"
+build-info = "0.0.36"
+build-info-build = "0.0.36"
 chrono = "0.4.35"
 chrono-tz = "0.9.0"
 saffron = "0.1.0"
