--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -46,12 +46,16 @@ once_cell = { workspace = true }
 clap = { workspace = true, features = ["derive", "env"] }
 tracing = { workspace = true, features = ["log"] }
 tracing-subscriber = { workspace = true, features = ["fmt", "json", "time"] }
+build-info = { workspace = true }
 chrono = { workspace = true, features = ["now"] }
 chrono-tz = { workspace = true }
 iana-time-zone = { workspace = true }
 tokio = { workspace = true, features = ["rt", "sync",  "time"] }
 pallas = { workspace = true }
 saffron = { workspace = true }
+
+[build-dependencies]
+build-info-build = { workspace = true }
 
 [dev-dependencies]
 hex = { workspace = true }
