--- a/hermes/Cargo.toml
+++ b/hermes/Cargo.toml
@@ -80,6 +80,7 @@ once_cell = "1.19.0"
 clap = "4.5.3"
 build-info = "0.0.36"
 build-info-build = "0.0.36"
+derive_more = "0.99.17"
 chrono = "0.4.35"
 chrono-tz = "0.9.0"
 saffron = "0.1.0"
