--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -47,6 +47,7 @@ clap = { workspace = true, features = ["derive", "env"] }
 tracing = { workspace = true, features = ["log"] }
 tracing-subscriber = { workspace = true, features = ["fmt", "json", "time"] }
 build-info = { workspace = true }
+derive_more = { workspace = true }
 chrono = { workspace = true, features = ["now"] }
 chrono-tz = { workspace = true }
 iana-time-zone = { workspace = true }
