--- a/hermes/Cargo.toml
+++ b/hermes/Cargo.toml
@@ -90,3 +90,5 @@ pest_derive = "2.7.2"
 hdf5 = { git="https://github.com/aldanor/hdf5-rust.git", rev="694e900972fbf5ffbdd1a2294f57a2cc3a91c994", version="0.8.1" }
 serde = "1.0"
 serde_json = "1.0"
+console = "0.15.8"
+indicatif = "0.17.8"
