--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -57,6 +57,8 @@ saffron = { workspace = true }
 hdf5 = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
+console = { workspace = true }
+indicatif = { workspace = true }
 
 [build-dependencies]
 build-info-build = { workspace = true }
