--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -27,7 +27,6 @@ harness = false
 
 [dependencies]
 cardano-chain-follower = { workspace = true }
-
 wasmtime = { workspace = true, features = ["component-model"] }
 rusty_ulid = { workspace = true }
 anyhow = { workspace = true }
@@ -48,7 +47,7 @@ clap = { workspace = true, features = ["derive", "env"] }
 tracing = { workspace = true, features = ["log"] }
 tracing-subscriber = { workspace = true, features = ["fmt", "json", "time"] }
 build-info = { workspace = true }
-derive_more = { workspace = true, features = ["display"], default-features = false }
+derive_more = { workspace = true }
 chrono = { workspace = true, features = ["now"] }
 chrono-tz = { workspace = true }
 iana-time-zone = { workspace = true }
