fix: tracing-subscriber

--- a/hermes/.gitignore
+++ b/hermes/.gitignore
@@ -12,3 +12,6 @@ bindings.rs
 
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
+
+# Auto-generated while executing the code locally
+bin/hermes_datastore.db
