--- a/hermes/Cargo.toml
+++ b/hermes/Cargo.toml
@@ -65,7 +65,7 @@ hex-literal = "0.4.1"
 thiserror = "1.0.56"
 hex = "0.4.3"
 tracing = "0.1.40"
-tracing-subscriber = "0.3.18"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 criterion = "0.5.1"
 libtest-mimic = "0.7.0"
 crossbeam-queue = "0.3.11"
