--- a/hermes/deny.toml
+++ b/hermes/deny.toml
@@ -70,7 +70,8 @@ allow = [
     "BSD-2-Clause",
     "BlueOak-1.0.0",
     "Apache-2.0 WITH LLVM-exception",
-    "CC0-1.0"
+    "CC0-1.0",
+    "ISC",
 ]
 exceptions = [
     #{ allow = ["Zlib"], crate = "tinyvec" },
