feat: file serial for running tests

--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -64,3 +64,4 @@ build-info-build = { workspace = true }
 [dev-dependencies]
 hex = { workspace = true }
 tracing-subscriber = { workspace = true }
+serial_test = { workspace = true }
