--- a/hermes/Cargo.toml
+++ b/hermes/Cargo.toml
@@ -87,3 +87,4 @@ saffron = "0.1.0"
 tokio = "1.36.0"
 libsqlite3-sys = "0.28.0"
 stringzilla = "3.8.4"
+serial_test = { version = "3.1.1", features = ["file_locks"] }
