--- a/hermes/crates/cbork/deny.toml
+++ b/hermes/crates/cbork/deny.toml
@@ -52,7 +52,8 @@ unknown-git = "deny"
 allow-git = [
     "https://github.com/input-output-hk/hermes.git",
     "https://github.com/input-output-hk/catalyst-pallas.git",
-    "https://github.com/bytecodealliance/wasmtime"
+    "https://github.com/bytecodealliance/wasmtime",
+    "https://github.com/aldanor/hdf5-rust",
 ]
 
 [licenses]
@@ -69,7 +70,8 @@ allow = [
     "BSD-2-Clause",
     "BlueOak-1.0.0",
     "Apache-2.0 WITH LLVM-exception",
-    "CC0-1.0"
+    "CC0-1.0",
+    "ISC",
 ]
 exceptions = [
     #{ allow = ["Zlib"], crate = "tinyvec" },
