--- a/hermes/schemas/example/hermes_app_manifest.json
+++ b/hermes/schemas/example/hermes_app_manifest.json
@@ -1,5 +1,5 @@
 {
-    "$schema": "../hermes_app_manifest.schema.json",
+    "$schema": "https://raw.githubusercontent.com/input-output-hk/hermes/main/hermes/schemas/hermes_app_manifest.schema.json",
     "metadata": "file://metadata.json",
     "modules": [
         {
