--- a/hermes/schemas/example/hermes_module_manifest.json
+++ b/hermes/schemas/example/hermes_module_manifest.json
@@ -1,5 +1,5 @@
 {
-    "$schema": "../hermes_module_manifest.schema.json",
+    "$schema": "https://raw.githubusercontent.com/input-output-hk/hermes/main/hermes/schemas/hermes_module_manifest.schema.json",
     "metadata": "file://modules/counter/counter_metadata.json",
     "component": "file://counter.wasm",
     "config_schema": "file://modules/counter/config.schema.json",
