--- a/hermes/deny.toml
+++ b/hermes/deny.toml
@@ -87,7 +87,7 @@ license-files = [{ path = "../../../LICENSE", hash = 0x001c7e6c }]
 [[licenses.clarify]]
 crate = "hdf5-src"
 expression = "MIT"
-license-files = [{ path = "../../../LICENSE", hash = 0x001c7e6c }]
+license-files = [{ path = "../LICENSE-MIT", hash = 0x001c7e6c }]
 
 # SPDX considers OpenSSL to encompass both the OpenSSL and SSLeay licenses
 # https://spdx.org/licenses/OpenSSL.html
