--- a/hermes/Cargo.toml
+++ b/hermes/Cargo.toml
@@ -87,3 +87,5 @@ saffron = "0.1.0"
 tokio = "1.36.0"
 hdf5 = { git="https://github.com/aldanor/hdf5-rust.git", rev="694e900972fbf5ffbdd1a2294f57a2cc3a91c994", version="0.8.1", features = ["static","blosc","zlib","lzf"]}
 console = "0.15.8"
+serde = "1.0"
+serde_json = "1.0"
