--- a/wasm/wasi-hermes-component-adapter/deny.toml
+++ b/wasm/wasi-hermes-component-adapter/deny.toml
@@ -52,7 +52,8 @@ unknown-git = "deny"
 allow-git = [
     "https://github.com/input-output-hk/hermes.git",
     "https://github.com/input-output-hk/catalyst-pallas.git",
-    "https://github.com/bytecodealliance/wasmtime"
+    "https://github.com/bytecodealliance/wasmtime",
+    "https://github.com/aldanor/hdf5-rust",
 ]
 
 [licenses]
@@ -69,7 +70,8 @@ allow = [
     "BSD-2-Clause",
     "BlueOak-1.0.0",
     "Apache-2.0 WITH LLVM-exception",
-    "CC0-1.0"
+    "CC0-1.0",
+    "ISC",
 ]
 exceptions = [
     #{ allow = ["Zlib"], crate = "tinyvec" },
@@ -81,6 +83,11 @@ exceptions = [
 crate = "byte-array-literals"
 expression = "Apache-2.0 WITH LLVM-exception"
 license-files = [{ path = "../../../LICENSE", hash = 0x001c7e6c }]
+
+[[licenses.clarify]]
+crate = "hdf5-src"
+expression = "MIT"
+license-files = [{ path = "../LICENSE-MIT", hash = 0x001c7e6c }]
 
 # SPDX considers OpenSSL to encompass both the OpenSSL and SSLeay licenses
 # https://spdx.org/licenses/OpenSSL.html
