--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -55,6 +55,7 @@ tokio = { workspace = true, features = ["rt", "sync",  "time"] }
 pallas = { workspace = true }
 saffron = { workspace = true }
 hdf5 = { workspace = true }
+blosc-src = { workspace = true }
 console = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
