--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -68,3 +68,6 @@ build-info-build = { workspace = true }
 hex = { workspace = true }
 tracing-subscriber = { workspace = true }
 temp-dir = "0.1.13"
+
+[package.metadata.cargo-machete]
+ignored = ["blosc-src"]
