add new `name` field to the Manifest file

--- a/hermes/schemas/example/hermes_module_manifest.json
+++ b/hermes/schemas/example/hermes_module_manifest.json
@@ -1,5 +1,6 @@
 {
     "$schema": "https://raw.githubusercontent.com/input-output-hk/hermes/main/hermes/schemas/hermes_module_manifest.schema.json",
+    "name": "module",
     "metadata": "file://modules/counter/counter_metadata.json",
     "component": "file://counter.wasm",
     "config": {
