--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -55,6 +55,8 @@ tokio = { workspace = true, features = ["rt", "sync",  "time"] }
 pallas = { workspace = true }
 saffron = { workspace = true }
 hdf5 = { workspace = true }
+blosc-src = { workspace = true }
+num_cpus = { workspace = true }
 console = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
@@ -66,3 +68,6 @@ build-info-build = { workspace = true }
 hex = { workspace = true }
 tracing-subscriber = { workspace = true }
 temp-dir = "0.1.13"
+
+[package.metadata.cargo-machete]
+ignored = ["blosc-src"]
