feat: add basic node with default options

--- a/hermes_crates/hermes-ipfs/Cargo.toml
+++ b/hermes_crates/hermes-ipfs/Cargo.toml
@@ -22,7 +22,7 @@ bare_urls = "deny"
 unescaped_backticks = "deny"
 
 [lints.clippy]
-pedantic = "deny"
+pedantic = { level = "deny", priority = -1}
 unwrap_used = "deny"
 expect_used = "deny"
 exit = "deny"
@@ -39,3 +39,6 @@ unreachable = "deny"
 missing_docs_in_private_items = "deny"
 
 [dependencies]
+anyhow = "1.0.86"
+directories = "5.0.1"
+rust-ipfs = "0.11.19"
