feat: SQLite3 module implementation (#221)
* feat: initial commit

* feat: prepare function

* feat: conn close fn

* feat: finalize fn

* feat: stmt fn

* feat: stmt bind

* feat: stmt col fn

* feat: status for stmt function

* feat: app config

* feat: dummy config

* feat: state

* feat: sqlite object exec

* fix: n byte

* feat: stringzilla to detect PRAGMA uses

* feat: stringzilla to detect PRAGMA uses

* feat: tmp apply config

* feat: persistent config size

* feat: in-memory size limit

* refactor: group result code

* fix: calculate page size

* refactor: remove comment

* feat: test dummy

* feat: init modules for testing

* docs: conn module comment

* refactor: rename module to core

* feat: statement core module

* feat: core open module

* docs: core open module

* chore: fmtfix and lintfix

* feat: initial tests

* feat: open test

* fix: tracing-subscriber

* fix: inmemory limit

* chore: cspell

* feat: file serial for running tests

* chore: fmtfix

* feat: connection tests

* feat: statement tests for finalize

* feat: schema test

* feat: finalize tests

* feat: test value

* feat: bind values

* feat: blob test

* feat: config test

* feat: drop for resources

* chore: fmtfix

* chore: change inmemory

* fix: change interface

* feat: errcode fn

* refactor: constants

* refactor: contants

* feat: full interface

* test: execute and errcode

* chore: fix lint warns

* chore: error name

* fix: cspell

* fix: cspell

* chore: cleaning tests

* chore: string as str

* chore: change pathbuf

* chore: clean db close in test

* chore: str params

* feat: test pragma

* fix: lint warnings

* fix: typo

* fix: execute to use sqlite execute

--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -54,6 +54,8 @@ iana-time-zone = { workspace = true }
 tokio = { workspace = true, features = ["rt", "sync",  "time"] }
 pallas = { workspace = true }
 saffron = { workspace = true }
+libsqlite3-sys = { workspace = true, features = ["bundled"] }
+stringzilla = { workspace = true }
 hdf5 = { workspace = true }
 blosc-src = { workspace = true }
 num_cpus = { workspace = true }
@@ -68,6 +70,7 @@ build-info-build = { workspace = true }
 [dev-dependencies]
 hex = { workspace = true }
 tracing-subscriber = { workspace = true }
+serial_test = { workspace = true }
 temp-dir = "0.1.13"
 
 [package.metadata.cargo-machete]
