feat: add example add-file-with-pinning.rs
example that shows how to add, pin, unpin, and get a file from IPFS

--- a/hermes_crates/hermes-ipfs/Cargo.toml
+++ b/hermes_crates/hermes-ipfs/Cargo.toml
@@ -41,3 +41,7 @@ missing_docs_in_private_items = "deny"
 [dependencies]
 anyhow = "1.0.86"
 rust-ipfs = "0.11.19"
+thiserror = "1.0.61"
+
+[dev-dependencies]
+tokio = "1.38.0"
