fix: add missing ipld crate

--- a/hermes_crates/hermes-ipfs/Cargo.toml
+++ b/hermes_crates/hermes-ipfs/Cargo.toml
@@ -40,6 +40,7 @@ missing_docs_in_private_items = "deny"
 
 [dependencies]
 anyhow = "1.0.86"
+libipld = "0.16.0"
 rust-ipfs = "0.11.19"
 thiserror = "1.0.61"
 
