refactor(hermes-lib): Remove mithril snapshot as a reference because we can only have at most 3.  Simplifies logic significantly.

--- a/hermes/crates/cardano-chain-follower/Cargo.toml
+++ b/hermes/crates/cardano-chain-follower/Cargo.toml
@@ -16,6 +16,8 @@ pallas-hardano.workspace = true
 thiserror.workspace = true
 tokio = { workspace = true, features = ["macros", "rt", "net", "rt-multi-thread"] }
 tracing.workspace = true
+dashmap = { workspace = true }
+once_cell = { workspace = true }
 
 [dev-dependencies]
 hex.workspace = true
