--- a/hermes/Cargo.toml
+++ b/hermes/Cargo.toml
@@ -3,6 +3,7 @@ resolver = "2"
 members = [
     "bin",
     "crates/cardano-chain-follower",
+    "crates/hermes-ipfs",
 ]
 
 [workspace.package]
@@ -96,3 +97,5 @@ console = "0.15.8"
 serde = "1.0"
 serde_json = "1.0"
 jsonschema = "0.18.0"
+libipld = "0.16.0"
+rust-ipfs = "0.11.19"
