--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -62,6 +62,7 @@ serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 hyper = { version = "0.14.10", features = ["full"] }
 futures = "0.3.30"
+bincode = "1.3.3"
 
 [build-dependencies]
 build-info-build = { workspace = true }
