feat(hermes-lib): Add the code to fetch and validate the certificate for the next snapshot.

--- a/hermes/crates/cardano-chain-follower/Cargo.toml
+++ b/hermes/crates/cardano-chain-follower/Cargo.toml
@@ -23,6 +23,7 @@ mithril-client = {version = "0.8.0", features = ["full"]}
 anyhow = { workspace = true }
 regex = { workspace = true }
 chrono = { workspace = true }
+download-lib = "0.2.3"
 
 [dev-dependencies]
 hex.workspace = true
